--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,7 @@ header a {
 .home {
   display: grid;
   grid-template-columns: 3fr 1fr;
-  gap: 100px;
+  gap: 50px;
 }
 .workout-details {
   background: #fff;
@@ -65,6 +65,9 @@ header a {
   padding: 6px;
   border-radius: 50%;
   color: #333;
+}
+.workout-details .delete_btn{
+  top: 70px;
 }
 
 /* new workout form */
@@ -99,4 +102,11 @@ div.error {
 }
 input.error {
   border: 1px solid var(--error);
+}
+
+.actions {
+  display: flex;
+  gap: 1rem;
+  margin-top: 0.5rem;
+  cursor: pointer;
 }
